# pack

./: .gitignore  AGENTS.md  Cargo.toml  README.md  operator.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: plan.md
fixtures/: README.md
fixtures/artifacts/: nov.lock.json  profile.yaml
fixtures/packs/extra_member/: shape.report.json  undeclared.txt  verify.report.json
fixtures/packs/tampered_manifest/: manifest.json  rules.json
fixtures/packs/tampered_member/: dec.lock.json  manifest.json  rvl.report.json
fixtures/packs/valid/: rvl.report.json  unknown.txt
fixtures/packs/valid/nested_registry/: loans.csv  registry.json
fixtures/schema/: expected.json
fixtures/schema/fail/: no_version_field.json  unknown_version.json  yaml_missing_profile_id.yaml  yaml_missing_schema_version.yaml
fixtures/schema/pass/: artifact_assess.json  artifact_canon.json  lockfile.json  profile.yaml  report_compare.json  report_rvl.json  report_shape.json  report_verify.json  rules.json
fixtures/schema/skipped/: plain.txt
pack/: manifest.json
src/: lib.rs  main.rs  operator.rs  schema.rs
src/cli/: args.rs  exit.rs  mod.rs
src/collect/: collector.rs  mod.rs  path.rs
src/copy/: hasher.rs  mod.rs  processor.rs
src/detect/: member_type.rs  mod.rs
src/diff/: command.rs  compare.rs  mod.rs
src/finalize/: mod.rs  writer.rs
src/manifest/: canonical.rs  mod.rs  model.rs
src/network/: mod.rs  pull.rs  push.rs  transport.rs
src/refusal/: codes.rs  envelope.rs  mod.rs
src/seal/: collect.rs  collision.rs  command.rs  copy.rs  finalize.rs  manifest.rs  mod.rs  orchestrator.rs
src/verify/: checker.rs  checks.rs  command.rs  mod.rs  report.rs  schema.rs
src/witness/: ledger.rs  mod.rs  query.rs  record.rs
tests/: cli_scaffold.rs  golden_rules.rs  refusal_suite.rs  schema_validation.rs  seal_suite.rs  verify_suite.rs  witness_suite.rs
