[package]
name = "pack"
version = "0.1.0"
edition = "2021"
description = "Seal lockfiles, reports, rules, and registry artifacts into one immutable, self-verifiable evidence pack."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tempfile = "3"

[lib]
name = "pack"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "pack"
path = "src/main.rs"
