[package]
name = "pack"
version = "0.2.2"
edition = "2021"
description = "Seal lockfiles, reports, rules, and registry artifacts into one immutable, self-verifiable evidence pack."
license = "MIT"

[dependencies]
base64 = "0.22"
blake3 = "=1.8.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tempfile = "3"
ureq = { version = "2", features = ["json"] }

[lib]
name = "pack"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
spine-rules = { git = "https://github.com/cmdrvl/spine-rules" }

[[bin]]
name = "pack"
path = "src/main.rs"
